Metadata/objects/Product_Bundle_Line__c.object
<CustomObject>
    <description>The line items of Product Bundle such as Products etc.</description>
    <fields>
        <fullName>Is_Price_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is checked for a specific bundle line, Price of the bundle line should be editable in Quote/Order Wizards</description>
        <inlineHelpText>When this is checked for a specific bundle line, Price of the  bundle line should be editable in Quote/Order Wizards</inlineHelpText>
        <label>Is Price Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Quantity_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is checked for a specific bundle line, Quantity of the bundle line should be editable in Quote/Order Wizards</description>
        <inlineHelpText>When this is checked for a specific bundle line, Quantity of the bundle line should be editable in Quote/Order Wizards</inlineHelpText>
        <label>Is Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <label>Product Bundle</label>
        <referenceTo>Product_Bundle__c</referenceTo>
        <relationshipName>Product_Bundle_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipName>Product_Bundle_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipName>Product_Bundle_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice IT Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Bundle Lines</relationshipLabel>
        <relationshipName>Product_Bundle_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>This field contains Default Quantity for Bundle line items</description>
        <inlineHelpText>This field contains Default Quantity for Bundle line items</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>This field contains unit price of  Bundle line items</description>
        <inlineHelpText>This field contains unit price of Bundle line items</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Bundle Line</label>
    <nameField>
        <displayFormat>Line-{0000}</displayFormat>
        <label>Product Bundle Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Bundle Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>